# ChiptunePlayer-2.22-Firmware

./: .cproject  .directory  .gdbinit  .gitignore  .gitmodules  .project  CMakeLists.txt  CMakeToolchain.cmake  README.md  cmake_functions.cmake  cmp.sh  git_pull_sm_utilities.sh  main.c  main.cpp  makefile  project_structure_presentation.pu  rebuild_sm_utilities.sh  start_full_sm.sh  start_soft_sm.sh  track.c  trash
bsp/freertos/: CMakeLists.txt  ayplayer_freertos_func.c  ayplayer_freertos_func.cpp  ayplayer_freertos_func_cpp.cpp  ayplayer_freertos_heap_4.c  ayplayer_os_object.cpp  ayplayer_os_object.h
bsp/freertos/low_level/src/: freertos_heap_4.cpp  hard_fault_info.cpp  hooks.cpp  memory_layer.cpp  statistics_timer.cpp
bsp/freertos/user_obj/inc/: ayplayer_os_object.h
bsp/freertos/user_obj/src/: ayplayer_os_object.cpp
bsp/gui/: CMakeLists.txt
bsp/gui/callbacks/: gui_callback.cpp
bsp/gui/driver/: ayplayer_gui_low.cpp
bsp/gui/fonts/: minecraft_rus_regular_8.cpp
bsp/mc_hardware/: CMakeLists.txt  ayplayer_adc.cpp  ayplayer_clock.cpp  ayplayer_clock.h  ayplayer_gpio.cpp  ayplayer_gpio_cfg.cpp  ayplayer_gpio_global_port.cpp  ayplayer_gpio_global_port_cfg.cpp  ayplayer_mc_hardware.h  ayplayer_pwr.cpp  ayplayer_spi.cpp  ayplayer_timers.cpp  ayplayer_uart.cpp  ayplayer_wdt.cpp
bsp/mc_hardware/src/: ayplayer_adc.cpp  ayplayer_clock.cpp  ayplayer_gpio.cpp  ayplayer_gpio_cfg.cpp  ayplayer_gpio_global_port.cpp  ayplayer_gpio_global_port_cfg.cpp  ayplayer_pwr.cpp  ayplayer_spi.cpp  ayplayer_timers.cpp  ayplayer_uart.cpp  ayplayer_wdt.cpp
bsp/pcb_hardware/: CMakeLists.txt  ayplayer_ay_low.cpp  ayplayer_button.cpp  ayplayer_digital_potentiometer.cpp  ayplayer_fat_low_level.cpp  ayplayer_generator.cpp  ayplayer_lcd_driver.cpp  ayplayer_microsd_card.cpp  ayplayer_pcb_hardware.h  ayplayer_pin.cpp  ayplayer_shift_register.cpp  ayplayer_shift_register_pin.cpp  ayplayer_shift_register_port.cpp
bsp/pcb_hardware/ay/: ayplayer_ay_low.cpp  ayplayer_file_play.cpp
bsp/pcb_hardware/inc/: ayplayer_pcb_hardware.h
bsp/pcb_hardware/src/: ayplayer_ay_low.cpp  ayplayer_button.cpp  ayplayer_fat_low_level.cpp  ayplayer_generator.cpp  ayplayer_lcd_driver.cpp  ayplayer_microsd_card.cpp  ayplayer_shift_register.cpp  ayplayer_shift_register_port.cpp
c_code/: CMakeLists.txt  CMakeToolchain.cmake  main.c
c_code/bsp/mc_hardware/inc/: gpio.h  mc_hardware.h
c_code/bsp/mc_hardware/src/: core.c  gpio.c  rcc.c  sdio.c  spi.c  spi_board.c  spi_lcd.c  tim_lcd_pwm.c  uart.c
c_code/bsp/pcb_hardware/inc/: pcb_hardware.h
c_code/bsp/pcb_hardware/src/: pcb_hardware.c
c_code/bsp/socket_emul_layer/inc/: socket_emul_layer.h  socket_emul_layer_ports.h
c_code/bsp/socket_emul_layer/src/: socket_emul_layer.c
c_code/cfg/: FreeRTOSConfig.h  ffconf.h  freertos_obj.h  luaconf.h
c_code/legacy/: trash
c_code/legacy/cfg/: user_os.h
c_code/legacy/openocd_configs/: README.md  openocd_stm32f4_stlink_v2.cfg
c_code/lib/fatfs/src/: fatfs_low_level.c  ff.c
c_code/lib/lua/inc/: lauxlib.h  ltests.h
c_code/lib/lua/src/: lauxlib.c  lbaselib.c  lgc.c  lobject.c  lstrlib.c  ltests.c  lvm.c
c_code/logic/aym_psg_parser/inc/: aym_psg_parser.h
c_code/logic/aym_psg_parser/src/: aym_psg_parser.c
c_code/logic/lua_lib/inc/: l.h  lua_ext_func.h
c_code/logic/lua_lib/src/: lua_ext_func.c  lua_fat.c  lua_interactive.c  lua_lcd.c  lua_lib.c  lua_os.c  (+2 more)
c_code/resurse/img/: img_bat_1.h  img_bat_3.h  img_bat_4.h  img_bat_5.h  img_bat_worn.h  img_dir.h  img_file.h  img_pause.h  img_play.h
user/: CMakeLists.txt  ayplayer_logger.cpp  main.cpp  vectors.cpp
user/ayplayer_class/: ayplayer.cpp  ayplayer.h  ayplayer_core_callback.cpp  ayplayer_core_finding_supported_file.cpp  ayplayer_core_gui.cpp  ayplayer_core_init.cpp  ayplayer_core_play.cpp  ayplayer_core_print_log.cpp  ayplayer_core_pwr.cpp  ayplayer_core_rcc.cpp  ayplayer_core_sd.cpp  ayplayer_core_sort_filelist.cpp  ayplayer_core_start.cpp  ayplayer_core_task.cpp  ayplayer_core_timer_handler.cpp  ayplayer_hardware_mc_init.cpp  base.cpp  base.h  base_core_finding_supported_file.cpp  base_core_gui.cpp  base_core_play.cpp  base_core_print_log.cpp  base_core_sort.cpp  base_core_sort_filelist.cpp  base_core_start.cpp  base_core_task.cpp  base_core_timer_handler.cpp  base_file.cpp  base_hardware_mc_init.cpp  base_sd.cpp  base_sort.cpp  base_task.cpp  sd.cpp
user/ayplayer_class/ayplayer_file/: ayplayer_ay_file_class.cpp  ayplayer_ay_file_class.h  ayplayer_file_play.cpp
user/ayplayer_class/ayplayer_gui/: ayplayer_gui.cpp  ayplayer_gui.h
user/ayplayer_class/ayplayer_nvic/: ayplayer_nvic.cpp
user/ayplayer_class/ayplayer_rcc/: ayplayer_rcc.cpp
user/ayplayer_class/ayplayer_sd_control/: ayplayer_sd_control.cpp  ayplayer_sd_control.h
user/ayplayer_class/base/: base.cpp  base.h  base_core_gui.cpp  base_core_play.cpp  base_core_play_func.cpp  base_core_print_log.cpp  base_core_start.cpp  base_file.cpp  base_finding_supported_file.cpp  base_syscfg.cpp
user/ayplayer_class/fat/: ayplayer_fat.cpp  ayplayer_fat.h  ayplayer_struct_fat_cfg.h  fat.cpp  fat.h
user/ayplayer_class/gui/: gui.cpp  gui.h
user/ayplayer_class/muxer/: muxer.cpp
user/ayplayer_class/nvic/: nvic.cpp  nvic.h
user/ayplayer_class/sd_control/: sd_control.cpp
user/ayplayer_class/struct/: ayplayer_struct_cfg.h  ayplayer_struct_gpio_cfg.h  ayplayer_struct_gui_cfg.h  ayplayer_struct_mcu_cfg.h  ayplayer_struct_pcb_cfg.h
user/ayplayer_class/structs/: ayplayer_struct_cfg.h  ayplayer_struct_gpio_cfg.h  ayplayer_struct_gui_cfg.h  ayplayer_struct_mcu_cfg.h  ayplayer_struct_pcb_cfg.h
user/ayplayer_file/: ayplayer_ay_file_class.h
user/ayplayer_gui/: ayplayer_gui.cpp  ayplayer_gui.h
user/ayplayer_nvic/: ayplayer_nvic.h
user/ayplayer_obj/: ayplayer_cfg.cpp  ayplayer_gpio_cfg.cpp  ayplayer_gui_cfg.cpp  ayplayer_mcu_cfg.cpp  ayplayer_muxer.cpp  ayplayer_pcb_cfg.cpp
user_code/: CMakeLists.txt  ayplayer_logger.cpp  main.cpp
user_code/ayplayer_class/structs/: ayplayer_struct_mcu_cfg.h  ayplayer_struct_pcb_cfg.h
user_code/ayplayer_obj/: ayplayer_gpio_cfg.cpp  ayplayer_gui_cfg.cpp  ayplayer_mcu_cfg.cpp
(+395 files in other folders)
